--- a/ui-recipevault/Containerfile
+++ b/ui-recipevault/Containerfile
@@ -1,25 +1,31 @@
 # Install the application dependencies in a full UBI Node docker image
-#FROM registry.access.redhat.com/ubi8/nodejs-14:latest
+FROM registry.access.redhat.com/ubi8/nodejs-14:latest as builder
 
-# Copy package.json and package-lock.json
-#COPY package*.json ./
+WORKDIR /tmp/src
+USER 0
+ADD . /tmp/src
+RUN chown -R 1001:0 /tmp/src
+USER 1001
 
-# Install app dependencies
-#RUN npm install 
+# Install the dependencies
+RUN npm install && \
+   npm i -g corepack
 
-# Build production static files to /dist
-#RUN npm run build
+RUN yarn build
+
 
 # Copy the dependencies into a minimal Node.js image
 FROM registry.redhat.io/rhel8/nginx-118:1-48
 
 USER 0
-ADD /dist /tmp/src/
+COPY --from=builder /tmp/src/dist /tmp/src/
 RUN chown -R 1001:0 /tmp/src
 USER 1001
 
 # Let the assemble script to install the dependencies
 RUN /usr/libexec/s2i/assemble
+
+COPY .s2i/bin /usr/libexec/s2i
 
 # Run script uses standard ways to run the application
 CMD /usr/libexec/s2i/run
