--- a/rest-recipe/src/main/resources/application.properties
+++ b/rest-recipe/src/main/resources/application.properties
@@ -8,21 +8,6 @@
 # Resolves/Avoids issue when deploying to OCP/K8 clusters with Self-Signed Certs
 quarkus.kubernetes-client.trust-certs=true
 
-quarkus.kubernetes.pvc-volumes.claim-name=recipevault-pvcc
-quarkus.kubernetes.pvc-volumes.read-only=false
-
-quarkus.kubernetes.pvc-volumes.recipevault-pvcc.claim-name=recipevault-pvcc
-quarkus.kubernetes.pvc-volumes.recipevault-pvcc.readonly=false
-quarkus.kubernetes.mounts.recipevault-pvcc.path=/recipevault/images
-
-quarkus.openshift.pvc-volumes.claim-name=recipevault-pvcc
-quarkus.openshift.pvc-volumes.read-only=false
-
-quarkus.openshift.pvc-volumes.recipevault-pvcc.claim-name=recipevault-pvcc
-quarkus.openshift.pvc-volumes.recipevault-pvcc.readonly=false
-quarkus.openshift.mounts.recipevault-pvcc.path=/recipevault/images
-
-
 quarkus.http.port=8080
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:8081
@@ -33,16 +18,14 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 #quarkus.hibernate-orm.sql-load-script=import.sql
 
-quarkus.s3.endpoint-override=http://localhost:4566
+#quarkus.s3.endpoint-override=https://s3.us-east-2.amazonaws.com
 
-quarkus.s3.aws.region=us-east-1
+quarkus.s3.aws.region=us-east-2
 quarkus.s3.aws.credentials.type=static
-quarkus.s3.aws.credentials.static-provider.access-key-id=test-key
-quarkus.s3.aws.credentials.static-provider.secret-access-key=test-secret
+quarkus.s3.aws.credentials.static-provider.access-key-id=<test key>
+quarkus.s3.aws.credentials.static-provider.secret-access-key=<test secret>
+bucket.name=recipevault
 
-bucket.name=recipe-images
-image.persist.strategy=LOCAL
-persist.path=../ui-recipevault/public/images/
 
 
 
