--- a/ui-recipevault/Containerfile
+++ b/ui-recipevault/Containerfile
@@ -20,6 +20,10 @@ FROM registry.redhat.io/rhel8/nginx-118:1-48
 USER 0
 COPY --from=builder /tmp/src/dist /tmp/src/
 RUN chown -R 1001:0 /tmp/src
+
+COPY nginx/nginx.conf "${NGINX_CONF_PATH}"
+
+
 USER 1001
 
 # Let the assemble script to install the dependencies
