documentation and clean up

--- a/rest-recipe/src/main/resources/application.properties
+++ b/rest-recipe/src/main/resources/application.properties
@@ -10,7 +10,7 @@ quarkus.kubernetes-client.trust-certs=true
 
 quarkus.http.port=8080
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:8081
+quarkus.http.cors.origins=http://localhost:8082
 
 %prod.quarkus.hibernate-orm.database.generation=create
 
@@ -18,13 +18,21 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 #quarkus.hibernate-orm.sql-load-script=import.sql
 
-#quarkus.s3.endpoint-override=https://s3.us-east-2.amazonaws.com
+quarkus.s3.endpoint-override=http://localhost:4566
+
+#quarkus.s3.aws.region=us-east-2
+#quarkus.s3.aws.credentials.type=static
+#quarkus.s3.aws.credentials.static-provider.access-key-id=<test key>
+#quarkus.s3.aws.credentials.static-provider.secret-access-key=<test secret>
+#bucket.name=geoallen.recipevault.dev.images
 
 quarkus.s3.aws.region=us-east-2
-quarkus.s3.aws.credentials.type=static
-quarkus.s3.aws.credentials.static-provider.access-key-id=<test key>
-quarkus.s3.aws.credentials.static-provider.secret-access-key=<test secret>
-bucket.name=recipevault
+## Credentials are not required when connecting to localstack S3 ** 
+
+#quarkus.s3.aws.credentials.type=static
+#quarkus.s3.aws.credentials.static-provider.access-key-id=<test key>
+#quarkus.s3.aws.credentials.static-provider.secret-access-key=<test secret>
+bucket.name=geoallen.recipevault.dev.images
 
 
 
