--- a/rest-recipe/pom.xml
+++ b/rest-recipe/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redhat.geoallen</groupId>
-  <artifactId>recipevault-rest-recipe</artifactId>
+  <artifactId>rest-recipe</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     
