unique image name and ui updates

--- a/rest-recipe/src/main/resources/application.properties
+++ b/rest-recipe/src/main/resources/application.properties
@@ -10,7 +10,8 @@ quarkus.kubernetes-client.trust-certs=true
 
 quarkus.http.port=8080
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:8082
+#quarkus.http.cors.origins=http://localhost:8082
+quarkus.http.cors.origins=*
 
 %prod.quarkus.hibernate-orm.database.generation=create
 
