--- a/ui-recipevault/package.json
+++ b/ui-recipevault/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "auth0-js": "^9.18.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
