--- a/deploy/rest-recipe/rest-recipe-deployment.yaml
+++ b/deploy/rest-recipe/rest-recipe-deployment.yaml
@@ -11,72 +11,63 @@ metadata:
     app.kubernetes.io/component: rest-recipe
     app.kubernetes.io/instance: rest-recipe
     app.kubernetes.io/name: rest-recipe
-    app.kubernetes.io/part-of: recipe-vault
+    app.kubernetes.io/part-of: recipevault
+    app.openshift.io/runtime-namespace: recipevault
   name: rest-recipe
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: rest-recipe
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
-      annotations:
-        openshift.io/generated-by: OpenShiftWebConsole
-      creationTimestamp: null
       labels:
         app: rest-recipe
         deploymentconfig: rest-recipe
+      annotations:
+        openshift.io/generated-by: OpenShiftWebConsole
     spec:
       containers:
-      - env:
-        - name: quarkus.s3.aws.region
-          valueFrom:
-            configMapKeyRef:
-              key: quarkus.s3.aws.region
-              name: rest-recipe-config
-        - name: quarkus.s3.aws.credentials.type
-          valueFrom:
-            configMapKeyRef:
-              key: quarkus.s3.aws.credentials.type
-              name: rest-recipe-config
-        - name: bucket.name
-          valueFrom:
-            configMapKeyRef:
-              key: bucket.name
-              name: rest-recipe-config
-        - name: quarkus.s3.aws.credentials.static-provider.access-key-id
-          valueFrom:
-            secretKeyRef:
-              key: access-key-id
-              name: s3-recipevault
-        - name: quarkus.s3.aws.credentials.static-provider.secret-access-key
-          valueFrom:
-            secretKeyRef:
-              key: access-key
-              name: s3-recipevault
-        - name: quarkus.s3.endpoint-override
-          valueFrom:
-            configMapKeyRef:
-              key: quarkus.s3.endpoint-override
-              name: rest-recipe-config
-        image: quay.io/geoallen/rest-recipe
-        imagePullPolicy: Always
-        name: rest-recipe
-        ports:
-        - containerPort: 8080
-          protocol: TCP
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
+        - name: rest-recipe
+          image: quay.io/geoallen/rest-recipe
+          ports:
+            - containerPort: 8080
+              protocol: TCP
+          env:
+            - name: bucket.name
+              valueFrom:
+                configMapKeyRef:
+                  name: recipevault-images
+                  key: BUCKET_NAME
+            - name: quarkus.s3.aws.credentials.static-provider.access-key-id
+              valueFrom:
+                secretKeyRef:
+                  name: recipevault-images
+                  key: AWS_ACCESS_KEY_ID
+            - name: quarkus.s3.aws.credentials.static-provider.secret-access-key
+              valueFrom:
+                secretKeyRef:
+                  name: recipevault-images
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: quarkus.s3.aws.credentials.type
+              value: static
+            - name: quarkus.s3.endpoint-override
+              value: https://<S3_ROUTE>
+            - name: quarkus.s3.path-style-access
+              value: 'true'
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          imagePullPolicy: Always
       restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
       terminationGracePeriodSeconds: 30
+      dnsPolicy: ClusterFirst
+      securityContext: {}
+      schedulerName: default-scheduler
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 25%
+      maxSurge: 25%
+  revisionHistoryLimit: 10
+  progressDeadlineSeconds: 600
