--- a/deploy/ui-recipevault/recipevault-ui-config.yaml
+++ b/deploy/ui-recipevault/recipevault-ui-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  VUE_APP_IMAGE_SERVER_URL: <S3 Public Endpoint>
-  VUE_APP_RECIPE_DATA_SERVICE: <REST Recipe Route>
+  VUE_APP_IMAGE_SERVER_URL: <S3-ROUTE>/<BUCKET_NAME>/
+  VUE_APP_RECIPE_DATA_SERVICE: <REST_RECIPE_ROUTE>
 kind: ConfigMap
 metadata:
   labels:
